--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: DisplayR
-Title: What the Package Does (One Line, Title Case)
+Title: Functions for visualising data
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Jack", "Penzer", , "jack.penzer@sharecreative.com", role = c("aut", "cre"),
+           comment = c(ORCID = "Capture Intelligence"))
+Description: Aims to provide re-usable functions for various data visualisation challenges. There are functions for creating beautiful tables built on {gt}, interactive plots with {plotly} and static images using {ggplot2}
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+URL: https://jpcompartir.github.io/DisplayR/
+Imports: 
+    dplyr (>= 1.1.0),
+    ggplot2 (>= 3.4.0),
+    gt (>= 0.8.0),
+    plotly (>= 4.10.1)
