add MIT license add gh action badges to readme and rebuild build _pkgdown.yml skeleton

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,33 @@ url: https://jpcompartir.github.io/DisplayR/
 template:
   bootstrap: 5
 
+navbar:
+  structure:
+    left:  [home, reference, articles]
+    right: [github]
+
+reference:
+- title: "Theme Functions"
+  desc: "Functions for styling plot themes."
+- contents:
+
+- title: "Tables"
+  desc: "Functions for creating beautiful tables."
+- contents:
+
+- title: "Time Series"
+  desc: "Functions for visualising time series data."
+- contents:
+
+- title: "Categorical"
+  desc: "Functions for visualising categorical data."
+- contents:
+
+- title: "Continuous"
+  desc: "Functions for visualising continuous data"
+- contents:
+
+repo:
+  url:
+    home: https://jpcompartir.github.io/DisplayR/
+    source: https://jpcompartir.github.io/DisplayR/tree/main
