--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,8 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Jack", "Penzer", , "jack.penzer@sharecreative.com", role = c("aut", "cre"),
            comment = c(ORCID = "Capture Intelligence"))
-Description: Aims to provide re-usable functions for various data visualisation challenges. There are functions for creating beautiful tables built on {gt}, interactive plots with {plotly} and static images using {ggplot2}
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Aims to provide re-usable functions for various data visualisation challenges. There are functions for creating beautiful tables built on {gt}, interactive plots with {plotly} and static images using {ggplot2}.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
@@ -16,3 +15,7 @@ Imports:
     ggplot2 (>= 3.4.0),
     gt (>= 0.8.0),
     plotly (>= 4.10.1)
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
