--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,7 @@ Imports:
     plotly (>= 4.10.1)
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.1.4)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
