--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,15 @@ Imports:
     dplyr (>= 1.1.0),
     ggplot2 (>= 3.4.0),
     gt (>= 0.8.0),
+    mschart (>= 0.4.0),
     plotly (>= 4.10.1)
 Suggests: 
     knitr,
+    officer (>= 0.6.2),
     rmarkdown,
     testthat (>= 3.1.4)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
+LazyData: true
