import the pipe add to imports/suggests add to _pkgdown.yml create inst/images add globals to zzz.R

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -28,6 +28,12 @@ reference:
   desc: "Functions for visualising continuous data"
 - contents:
 
+- title: "PowerPoint & Excel"
+  desc: "Functions for exporting common & basic charts to PowerPoint"
+- contents:
+  - disp_ms_vot
+  - disp_ms_vot_grouped
+
 repo:
   url:
     home: https://jpcompartir.github.io/DisplayR/
