--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,13 +14,17 @@ Imports:
     dplyr (>= 1.1.0),
     ggplot2 (>= 3.4.0),
     gt (>= 0.8.0),
+    magrittr,
     mschart (>= 0.4.0),
-    plotly (>= 4.10.1)
+    plotly (>= 4.10.1),
+    rlang (>= 1.1.1)
 Suggests: 
     knitr,
     officer (>= 0.6.2),
     rmarkdown,
-    testthat (>= 3.1.4)
+    testthat (>= 3.1.4),
+    tidyverse,
+    viridis (>= 0.6.2)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Depends: 
