add dummy functions to _pkgdown.yml for now build out globals in zzz.R add images to man/figures for vignettes edit excel vignette to read from man/figure

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,22 +11,32 @@ reference:
 - title: "Theme Functions"
   desc: "Functions for styling plot themes."
 - contents:
+  - disp_ms_vot
+  - disp_ms_vot_grouped
 
 - title: "Tables"
   desc: "Functions for creating beautiful tables."
 - contents:
+  - disp_ms_vot
+  - disp_ms_vot_grouped
 
 - title: "Time Series"
   desc: "Functions for visualising time series data."
 - contents:
+  - disp_ms_vot
+  - disp_ms_vot_grouped
 
 - title: "Categorical"
   desc: "Functions for visualising categorical data."
 - contents:
+  - disp_ms_vot
+  - disp_ms_vot_grouped
 
 - title: "Continuous"
   desc: "Functions for visualising continuous data"
 - contents:
+  - disp_ms_vot
+  - disp_ms_vot_grouped
 
 - title: "PowerPoint & Excel"
   desc: "Functions for exporting common & basic charts to PowerPoint"
