--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,13 +12,12 @@ RoxygenNote: 7.2.3
 URL: https://jpcompartir.github.io/DisplayR/
 Imports: 
     dplyr (>= 1.1.0),
-    ggplot2 (>= 3.4.0),
-    gt (>= 0.8.0),
+    lubridate (>= 1.8.0),
     magrittr,
     mschart (>= 0.4.0),
-    plotly (>= 4.10.1),
     rlang (>= 1.1.1)
 Suggests: 
+    kableExtra,
     knitr,
     officer (>= 0.6.2),
     rmarkdown,
