change tidy evaluate logic to be !! + sym pattern rather than {{ }} to allow user to input string or symbol. Although, not 100% why {{ }} isn't working, assume it's because is.na() or tolower weren't data masking.
add tests to test-flextable

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,21 +12,23 @@ RoxygenNote: 7.2.3
 URL: https://jpcompartir.github.io/DisplayR/
 Imports: 
     dplyr (>= 1.1.0),
-    flextable,
+    flextable (>= 0.9.0),
     gt (== 0.8.0),
     lubridate (>= 1.8.0),
-    magrittr,
+    magrittr (>= 2.0.3),
     mschart (>= 0.4.0),
     rlang (>= 1.1.1),
-    scales
+    scales (>= 1.2.1),
+    stringr (>= 1.5.0),
+    tidyr (>= 1.3.0)
 Suggests: 
-    DT,
-    kableExtra,
-    knitr,
+    DT (>= 0.26),
+    kableExtra (>= 1.3.4),
+    knitr (>= 1.42),
     officer (>= 0.6.2),
-    rmarkdown,
+    rmarkdown (>= 2.21),
     testthat (>= 3.1.4),
-    tidyverse,
+    tidyverse (>= 1.3.2),
     viridis (>= 0.6.2)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
