--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,14 +13,17 @@ URL: https://jpcompartir.github.io/DisplayR/
 Imports: 
     dplyr (>= 1.1.0),
     flextable (>= 0.9.0),
+    ggplot2,
     gt (== 0.8.0),
     lubridate (>= 1.8.0),
     magrittr (>= 2.0.3),
     mschart (>= 0.4.0),
+    purrr (>= 1.0.1),
     rlang (>= 1.1.1),
     scales (>= 1.2.1),
     stringr (>= 1.5.0),
-    tidyr (>= 1.3.0)
+    tidyr (>= 1.3.0),
+    tidyselect
 Suggests: 
     DT (>= 0.26),
     kableExtra (>= 1.3.4),
