--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ URL: https://jpcompartir.github.io/DisplayR/
 Imports: 
     dplyr (>= 1.1.0),
     flextable (>= 0.9.0),
-    ggplot2,
+    ggplot2 (>= 3.4.2),
     gt (== 0.8.0),
     lubridate (>= 1.8.0),
     magrittr (>= 2.0.3),
@@ -23,7 +23,7 @@ Imports:
     scales (>= 1.2.1),
     stringr (>= 1.5.0),
     tidyr (>= 1.3.0),
-    tidyselect
+    tidyselect (>= 1.2.0)
 Suggests: 
     DT (>= 0.26),
     kableExtra (>= 1.3.4),
