--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     tidyr (>= 1.3.0),
     tidyselect (>= 1.2.0)
 Suggests: 
+    covr,
     DT (>= 0.26),
     kableExtra (>= 1.3.4),
     knitr (>= 1.42),
