Create plotting & theme vignette Build disp_plot_vot, building from HelpR function to be more flexible and more robust, export func explicitly return theme in table_gt/disp_gt_theme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(disp_gt)
 export(disp_ms_sent_grouped)
 export(disp_ms_vot)
 export(disp_ms_vot_grouped)
+export(disp_plot_vot)
 importFrom(magrittr,"%>%")
