--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     scales (>= 1.2.1),
     stringr (>= 1.5.0),
     tidyr (>= 1.3.0),
-    tidyselect (>= 1.2.0)
+    tidyselect (>= 1.2.0),
+    viridis
 Suggests: 
     covr,
     DT (>= 0.26),
@@ -32,8 +33,7 @@ Suggests:
     officer (>= 0.6.2),
     rmarkdown (>= 2.21),
     spelling,
-    testthat (>= 3.1.4),
-    viridis (>= 0.6.2)
+    testthat (>= 3.1.4)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Depends: 
