--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(disp_gt)
 export(disp_ms_sent_grouped)
 export(disp_ms_vot)
 export(disp_ms_vot_grouped)
-export(disp_plot_vot)
+export(dr_plot_vot)
+export(dr_plot_vot_group)
 importFrom(magrittr,"%>%")
