Add examples to plots_sentiment.R Move to plot_type from type = create dr_plot_sent_vot function to allow for sentiment by bars easily update vignette for plotting_theme_functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(disp_ms_vot)
 export(disp_ms_vot_grouped)
 export(dr_plot_sent)
 export(dr_plot_sent_group)
+export(dr_plot_sent_vot)
 export(dr_plot_vot)
 export(dr_plot_vot_group)
 importFrom(magrittr,"%>%")
