Add to globals, tidy up color -> colour Add base of theme vignette (much work needed)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,5 @@ export(dr_plot_vot_group)
 export(dr_theme_black)
 export(dr_theme_microsoft)
 export(dr_theme_samy)
+export(dr_theme_share)
 importFrom(magrittr,"%>%")
