Ran document() over full package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dr_plot_sent_vot)
 export(dr_plot_vot)
 export(dr_plot_vot_group)
 export(dr_theme_black)
+export(dr_theme_capture)
 export(dr_theme_microsoft)
 export(dr_theme_samy)
 export(dr_theme_share)
