--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
     rlang (>= 1.1.1),
     scales (>= 1.2.1),
     stringr (>= 1.5.0),
+    sysfonts,
     tidyr (>= 1.3.0),
     tidyselect (>= 1.2.0),
     viridis (>= 0.6.2)
