--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(disp_gt)
 export(disp_ms_sent_grouped)
 export(disp_ms_vot)
 export(disp_ms_vot_grouped)
+export(dr_plot_raincloud)
 export(dr_plot_sent)
 export(dr_plot_sent_group)
 export(dr_plot_sent_vot)
