--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,6 +18,7 @@ reference:
 - contents:
   - contains("dr_plot_vot")
   - contains("dr_plot_sent")
+  - contains("dr_plot_raincloud")
 
 - title: "Tabular Data"
   desc: "gt and flextable functions for creating beautiful tables in R"
