--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -31,6 +31,7 @@ reference:
 - contents:
   - contains('ms_vot')
   - disp_ms_sent_grouped
+  - dr_mmlb_barchart
 
 - title: "PowerPoint Utility Functions"
   desc: "Utility functions for working with PowerPoint from R"
