--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     scales (>= 1.2.1),
     stringr (>= 1.5.0),
     sysfonts,
+    tibble,
     tidyr (>= 1.3.0),
     tidyselect (>= 1.2.0),
     viridis (>= 0.6.2)
