add brands etc. to NAMESPACE and _pkgdown.yml and render docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(disp_gt)
 export(disp_ms_sent_grouped)
 export(disp_ms_vot)
 export(disp_ms_vot_grouped)
+export(dr_add_brand)
+export(dr_list_brands)
 export(dr_mmlb_barchart)
 export(dr_plot_raincloud)
 export(dr_plot_sent)
