Re-work the dr_add_brand() and dr_list_brands() functions to use cli for user experience, and to allow for all files from brands/x/ to be copied over
add cli:: to deps

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://jpcompartir.github.io/DisplayR/
 Imports: 
+    cli,
     dplyr (>= 1.1.0),
     flextable (>= 0.9.0),
     ggdist,
