--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -5,6 +5,11 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+  release:
+    types: [published]
+  schedule:
+    - cron: '00 09 * * 0'
+  workflow_dispatch:
 
 name: R-CMD-check
 
