--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,7 @@ Imports:
     cli,
     dplyr (>= 1.1.0),
     flextable (>= 0.9.0),
-    ggdist,
-    gghalves,
+    ggdist (>= 3.3.3),
     ggplot2 (>= 3.4.2),
     gt (>= 0.9.0),
     lubridate (>= 1.8.0),
